<resources>
    <string name="app_name">Tweet Lanes</string>
    <string name="app_launcher_name">Tweet Lanes</string>
    <string name="app_tweet_spotlight_activity_name">Tweet</string>
    <string name="back">Back</string>
    <string name="clear">Clear</string>
    <string name="share">Share</string>
    <string name="menu_settings">Settings</string>
    <string name="details">Details</string>
    <string name="location">Location</string>
    <string name="link">Link</string>
    <string name="more">More</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="done">Done</string>
    <string name="follows_you"><i>follows you</i></string>
    <string name="credits_oss_heading">Tweet Lanes uses the following open-source software:</string>
    <string name="credits_oss_items"><a href="https://github.com/chrisbanes/Android-PullToRefresh">Android-PullToRefresh</a>, Copyright 2013 Chris Banes.\n<a href="https://plus.google.com/117064558166627683075/posts">AOSP</a>, Copyright 2008-2013, Android Open Source Project.\n<a href="https://github.com/jasonpolites/gesture-imageview">GestureImageView</a>, Copyright 2012 Jason Polites.\n<a href="https://github.com/DHuckaby/Prime">Prime</a>, Copyright (C) 2012 Daniel Huckaby.\n<a href="https://github.com/koush/UrlImageViewHelper">UrlImageViewHelper</a>, Copyright 2013 Koushik Dutta.\n<a href="https://github.com/JakeWharton/Android-ViewPagerIndicator">ViewPagerIndicator</a>, Copyright 2012 Jake Wharton.\n</string>
    <string name="credits_art_items">Logo and promotional images created by <a href="https://plus.google.com/107629610345558527193/posts">Bruno Rime</a>. Used with permission.</string>
    <string name="credits_app_copyright">Copyright 2013, Chris Lacy.</string>
    <string name="authorize_twitter_account">Authorize Twitter Account</string>
    <string name="authorize_appdotnet_account">Authorize App.net Account</string>
    <string name="action_follow">Follow</string>
    <string name="action_unfollow">Unfollow</string>
    <string name="action_share">Share</string>
    <string name="action_manage_friendship">Manage Friendship</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_unfavorite">Unfavorite</string>
    <string name="action_block">Block User</string>
    <string name="action_report_for_spam">Report User for Spam</string>
    <string name="action_delete_status">Delete</string>
    <string name="action_retweet">Retweet</string>
    <string name="action_reply">Reply</string>
    <string name="action_message">Message</string>
    <string name="action_use_location">Use Location</string>
    <string name="action_take_photo">Take Photo</string>
    <string name="action_pick_photo">Pick Photo</string>
    <string name="action_save_to_gallery">Save image to Gallery</string>
    <string name="action_website">View on Website</string>
    <string name="action_next">Next</string>
    <string name="action_previous">Prev</string>
	<string name="action_show_replies">Show Replies</string>
	<string name="action_hide_replies">Hide Replies</string>
	<string name="action_show_retweets">Show Retweets</string>
	<string name="action_hide_retweets">Hide Retweets</string>
    <string name="action_show_retweets_adn">Show Reposts</string>
    <string name="action_hide_retweets_adn">Hide Reposts</string>
	<string name="action_bar_tweet_compose_title">New Tweet</string>
    <string name="action_bar_tweet_compose_title_adn">New Post</string>
	<string name="action_bar_tweet_reply_compose_title">Reply</string>
	<string name="action_bar_direct_message_compose_title">New Direct Message</string>
    <string name="action_bar_search_title">Searching for </string>
    <string name="title_settings">Settings</string>
    <string name="loading">Loading</string>
    <string name="via">via</string>
    <string name="new_tweet">New Tweet</string>
    <string name="new_tweets">New Tweets</string>
    <string name="new_post">New Post</string>
    <string name="new_posts">New Posts</string>
    <string name="no_more_content">~</string>
    <string name="load_more">Tap to load more</string>
    <string name="no_content_found">No content loaded at this time.</string>
    <string name="compose_tweet_default_hint">What\'s happening?</string>
    <string name="compose_tweet_to_user_hint">Tweet to </string>
    <string name="compose_tweet_to_user_hint_adn">Post at </string>
    <string name="compose_tweet_reply_to">Reply to </string>
    <string name="compose_tweet_finish">Send Tweet: </string>
    <string name="compose_tweet_finish_adn">Send Post: </string>
    <string name="compose_direct_message_default_hint">New Direct Message</string>
    <string name="compose_direct_message_finish">Send DM: </string>
    <string name="separator_more">More</string>
    <string name="add_account">Add Account</string>
    <string name="lane_user_home">Timeline</string>
    <string name="lane_user_tweets">My Tweets</string>
    <string name="lane_user_tweets_adn">My Posts</string>
    <string name="lane_user_retweets_of_me">Retweets of Me</string>
    <string name="lane_user_retweets_of_me_adn">Interactions</string>
    <string name="lane_user_favorites">My Favorites</string>
    <string name="lane_user_profile">My Profile</string>
    <string name="lane_user_mentions">\@ Mentions</string>
    <string name="lane_user_global_feed">Global Feed</string>
    <string name="lane_direct_messages">Direct Messages</string>
    <string name="lane_followers">Followers</string>
    <string name="lane_friends">Following</string>
    <string name="lane_profile_profile">Profile</string>
    <string name="lane_profile_tweets">Tweets</string>
    <string name="lane_profile_tweets_adn">Posts</string>
    <string name="lane_profile_mentions">\@ Mentions</string>
    <string name="lane_profile_favorites">Favorites</string>
    <string name="lane_search_tweets">Tweets</string>
    <string name="lane_search_tweets_adn">Posts</string>
    <string name="lane_search_people">People</string>
    <string name="lane_tweet_status">Tweet</string>
    <string name="lane_tweet_status_adn">Post</string>
    <string name="lane_tweet_conversation">Discussion</string>
    <string name="lane_tweet_favorited_by">Favorited By</string>
    <string name="lane_tweet_retweeted_by">Retweeted By</string>
    <string name="lane_tweet_retweeted_by_adn">Reposted By</string>
    <string name="status_count">Tweets</string>
    <string name="posts_count">Posts</string>
    <string name="friends_count">Following</string>
    <string name="following_count">Followers</string>
    <string name="favorites_count">Favorites</string>
    <string name="load_more_label">Tap to load more</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh&#8230;</string>
    <string name="pull_to_refresh_release_label">Release to refresh&#8230;</string>
    <string name="pull_to_refresh_refreshing_label">Loading&#8230;</string>
    <string name="pull_to_refresh_tap_label">Tap to refresh&#8230;</string>
    <string name="tweet_posted_success">Status posted</string>
    <string name="tweet_posted_error">Failed to post status</string>
    <string name="posting_tweet">Posting</string>
    <string name="posting_tweet_ongoing">Posting &#8230;</string>
    <string name="share_tweet">Tweet Text</string>
    <string name="share_tweet_link">Link to Tweet</string>
    <string name="share_link">Link in Tweet</string>
    <string name="share_first_link">Link in Tweet</string>
    <string name="dm_title">DMs with @</string>
    <string name="dm_username_hint">Username</string>
    <string name="direct_message_posted_success">Direct Message sent</string>
    <string name="direct_message_posted_error">Failed to post Direct Message</string>
    <string name="posting_direct_message">Sending Direct Message</string>
    <string name="posting_direct_message_ongoing">Sending Direct Message&#8230;</string>
    <string name="alert_share_title">Share</string>
    <string name="alert_share_message">\nHow would you like to share this Tweet?\n</string>
    <string name="alert_status_too_long">Your Tweet is too long and cannot be posted.\n\nTweets can be a maximum of 140 characters in length.</string>
    <string name="alert_status_too_long_adn">Your post is too long and cannot be posted.\n\nPosts can be a maximum of
        256 characters in length.</string>
    <string name="alert_status_invalid">Your status update cannot be posted as it contains invalid characters.</string>
    <string name="alert_direct_message_no_recipient">Please enter the Twitter username of the person to message.</string>
    <string name="alert_direct_message_too_long">The text of your Direct Message is too long and cannot be posted.\n\nYou message can be a maximum 140 characters in length.</string>
    <string name="alert_direct_message_invalid">Your Direct Message cannot be posted as it contains invalid characters.</string>
    <string name="alert_retweet_options">\nRetweet this Tweet to your followers?\n</string>
    <string name="alert_retweet_private">\nSorry, but you cannot retweet a tweet from a private account.\n</string>
    <string name="alert_accept_tos">&lt;br&gt;Before proceeding, please acknowledge that you accept the Tweet Lanes &lt;a href=\"http://www.tweetlanes.com/termsofservice\"&gt;Terms of Service&lt;/a&gt; and &lt;a href=\"http://www.tweetlanes.com/privacy\"&gt;Privacy Policy&lt;/a&gt;.&lt;br&gt;</string>
    <string name="alert_empty_image_cache_title">Empty the image cache?</string>
    <string name="alert_empty_image_cache_message">\nAll locally saved and in-memory images will be deleted and re-downloaded.\n</string>
    <string name="alert_customize_lanes_title">Customize Lanes</string>
    <string name="display_preferences">Display</string>
    <string name="other_preferences">Other</string>
    <string name="help_preferences">Help</string>
    <string name="title_theme_preference">Theme</string>
    <string name="dialog_title_theme_preference">Theme</string>
    <string name="title_customizelanes_preference">Customize Lanes</string>
	<string name="summary_customizelanes_preference">Show/hide specific lanes</string>
    <string name="title_statussize_preference">Font Size</string>
    <string name="dialog_title_statussize_preference">Font Size</string>
    <string name="title_profileimagesize_preference">Profile Image Size</string>
    <string name="dialog_title_profileimagesize_preference">Profile Image Size</string>
    <string name="title_showtabletmargin_preference">Lane Margin</string>
    <string name="title_downloadimages_preference">Download Images</string>
    <string name="summary_downloadimages_preference">Profile images and media thumbnail previews will be downloaded</string>
    <string name="title_volscroll_preference">VolScroll</string>
    <string name="summary_volscroll_preference">Scroll up and down the feed using the volume buttons</string>
    <string name="title_quote_preference">Quote Format</string>
    <string name="dialog_title_quote_preference">Quote Format</string>
    <string name="title_version_preference">Tweet Lanes version</string>
    <string name="summary_version_preference"></string>
    <string name="notification_preferences">Notifications</string>
    <string name="ringtone_preference">Ringtone</string>
	<string name="settings_credits_title">Credits</string>
	<string name="title_showtweetsource_preference">Source</string>
	<string name="summary_showtweetsource_preference">Display the name of the application the status update originated
        from</string>
    <string name="title_clearimagecache_preference">Empty Image Cache</string>
    <string name="settings_source_title">Source code</string>
    <string name="settings_source_summary">Fork Tweet Lanes on GitHub!</string>
    <string name="settings_donate_title">Donate</string>
</resources>